--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@ nav .navbar-logo {
 
 .videoSection {
   width: 100%;
-  height: 20rem;
+  height: 30rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -457,7 +457,7 @@ nav .navbar-logo {
 
 .dividerSection {
   width: 100%;
-  height: 20rem;
+  height: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -530,7 +530,7 @@ nav .navbar-logo {
   border-radius: 8px;
   scroll-behavior: smooth;
   scrollbar-width: none;
-  height: 28rem;
+  /* height: 28rem; */
 }
 
 .customersCarousel::-webkit-scrollbar {
@@ -556,7 +556,7 @@ nav .navbar-logo {
 
 .customerCard {
   width: 42rem;
-  height: 25rem;
+  height: 35rem;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -573,6 +573,7 @@ nav .navbar-logo {
   width: 100%;
   height: 3rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -601,21 +602,24 @@ nav .navbar-logo {
 }
 
 .customerCardFooter {
-  width: 80%;
-  height: 5rem;
+  width: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.customerCardHeader p {
+.customerCardHeader h3 {
   margin: 0;
   font-weight: 600;
   font-size: 1.5rem;
 }
 
-.customerCardText {
+.customerCardHeader p {
   color: var(--cinzaTexto);
+}
+
+.customerCardText {
+  margin-top: 1rem;
 }
 
 .customersArrows {
@@ -641,6 +645,137 @@ nav .navbar-logo {
   margin-right: 2rem;
   user-select: none;
 }
+
+.recentBlogSection {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0 2rem 0;
+}
+
+.recentBlogSectionText {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.recentBlogSectionText h2 {
+  margin: 2rem 0 1rem 0;
+  font-weight: 600;
+  font-size: 2.5rem;
+  color: var(--verdeTexto);
+  text-transform: uppercase;
+}
+
+.recentBlogSectionText p {
+  margin: 1rem 0 1rem 0;
+  width: 80%;
+  font-weight: 300;
+  color: var(--cinzaTexto);
+}
+
+.recentBlogCards {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.blogCard {
+  width: 25rem;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+.blogCardImage img {
+  height: 17rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.blogCardHeader h3 {
+  margin: 1rem 0 1rem 0;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: var(--verdeTexto);
+}
+
+.blogCardText {
+  width: 100%;
+  font-weight: 300;
+  color: var(--cinzaTexto);
+}
+
+.blogCardFooter {
+  width: 100%;
+  height: 3rem;
+  margin: 1rem 0 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.blogCardFooter a {
+  margin-left: 0.2rem;
+  color: var(--cinzaTexto);
+}
+
+.contactSection {
+  width: 60%;
+  height: 10rem;
+  background-image: url(./src/img/background.png);
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.contactDivider {
+  height: 80%;
+  width: 2px;
+  background-color: #fff;
+  margin: 2rem 0 2rem 0;
+  border-radius: 20px;
+}
+
+.infoContact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.infoContact span {
+  margin-right: 1rem;
+  scale: 1.5;
+  color: #fff;
+}
+
+.infoContact p {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+
+
 
 
 .title {
