--- a/style.css
+++ b/style.css
@@ -555,11 +555,11 @@ nav .navbar-logo {
 }
 
 .customerCard {
-  width: 42rem;
-  height: 35rem;
+  width: 35rem;
+  height: 25rem;
   background-color: #fff;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   margin: 1rem 0 0 0;
@@ -604,9 +604,35 @@ nav .navbar-logo {
 .customerCardFooter {
   width: 90%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-height: 40%;
+  overflow: hidden;
 }
+
+.customerCardFooter button {
+  width: 10rem;
+  height: 3rem;
+  background-color: var(--verdeIsobloco);
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.2s;
+  margin: 0.5rem 0 1rem 0;
+}
+
+.customerCardText {
+  margin-top: 1rem;
+  max-height: 80%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  
+}
+
 
 .customerCardHeader h3 {
   margin: 0;
@@ -618,9 +644,6 @@ nav .navbar-logo {
   color: var(--cinzaTexto);
 }
 
-.customerCardText {
-  margin-top: 1rem;
-}
 
 .customersArrows {
   width: 100%;
@@ -644,6 +667,129 @@ nav .navbar-logo {
   transition: transform 0.1s linear;
   margin-right: 2rem;
   user-select: none;
+}
+
+.brandLogoSection {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0 2rem 0;
+}
+
+.brandLogoSectionText {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.brandLogoSectionText h2 {
+  margin: 2rem 0 1rem 0;
+  font-weight: 600;
+  font-size: 2.5rem;
+  color: var(--verdeTexto);
+  text-transform: uppercase;
+}
+
+.brandLogoSectionText p {
+  margin: 1rem 0 1rem 0;
+  width: 80%;
+  font-weight: 300;
+  color: var(--cinzaTexto);
+}
+
+.brandLogos {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.brandWrapper .brandCarousel {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 7));
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 16px;
+  border-radius: 8px;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
+.brandCarousel::-webkit-scrollbar {
+  display: none;
+}
+.brandCarousel.no-transition {
+  scroll-behavior: auto;
+}
+.brandCarousel.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+.brandCarousel.dragging .card {
+  cursor: grab;
+  user-select: none;
+}
+
+.brandCarousel :where(.card, .img) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.brandsArrows {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0 2rem 0;
+}
+
+.brandsArrows span {
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  font-size: 1.25rem;
+  text-align: center;
+  line-height: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+  margin-right: 2rem;
+  user-select: none;
+}
+
+.brand {
+  list-style: none;
+  display: flex;
+}
+
+.brandLogo {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.brandLogo img {
+  width: 100%;
+  max-height: 100%;
+  display: flex;
+  justify-content: center;
+  object-fit: cover;
+  align-items: center;
+  object-fit: cover;
 }
 
 .recentBlogSection {
@@ -735,8 +881,8 @@ nav .navbar-logo {
 }
 
 .contactSection {
-  width: 60%;
-  height: 10rem;
+  width: 30%;
+  height: 6rem;
   background-image: url(./src/img/background.png);
   display: flex;
   justify-content: space-evenly;
@@ -770,7 +916,7 @@ nav .navbar-logo {
 
 .infoContact p {
   margin: 0;
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
   color: #fff;
 }
 
