--- a/style.css
+++ b/style.css
@@ -256,17 +256,12 @@ nav .navbar-logo {
   flex-wrap: nowrap;
 }
 
-.wrapper {
-  max-width: 1100px;
-  width: 100%;
-}
-
 .arrows {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2rem 2rem 0;
+  margin: 2rem 0 2rem 0;
 }
 
 .arrows span {
@@ -285,57 +280,19 @@ nav .navbar-logo {
   user-select: none;
 }
 
-.wrapper span:active {
-  transform: translateY(-50%) scale(0.85);
-}
-.wrapper span:first-child {
-  left: -22px;
-}
-.wrapper span:last-child {
-  right: -22px;
+#products {
+  width: 80vw;
+  height: auto;
 }
 
-.wrapper .carousel {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 3) - 12px);
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  gap: 16px;
-  border-radius: 8px;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
-}
-
-.carousel::-webkit-scrollbar {
-  display: none;
-}
-.carousel.no-transition {
-  scroll-behavior: auto;
-}
-.carousel.dragging {
-  scroll-snap-type: none;
-  scroll-behavior: auto;
-}
-.carousel.dragging .card {
-  cursor: grab;
-  user-select: none;
-}
-
-.carousel :where(.card, .img) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ProductsText {
+.productsText {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.ProductsText h2 {
+.productsText h2 {
   margin: 2rem 0 1rem 0;
 
   font-weight: 600;
@@ -344,7 +301,7 @@ nav .navbar-logo {
   text-transform: uppercase;
 }
 
-.ProductsText p {
+.productsText p {
   margin: 1rem 0 1rem 0;
   width: 80%;
   font-weight: 300;
@@ -452,7 +409,6 @@ nav .navbar-logo {
   border-radius: 20px;
   position: relative;
   margin-bottom: -10rem;
-
 }
 
 .dividerSection {
@@ -506,49 +462,9 @@ nav .navbar-logo {
   flex-wrap: wrap;
 }
 
-.customersWrapper {
-  max-width: 1100px;
-  width: 100%;
-}
-
-.customersWrapper span:active {
-  transform: translateY(-50%) scale(0.85);
-}
-.customersWrapper span:first-child {
-  left: -22px;
-}
-.customersWrapper span:last-child {
-  right: -22px;
-}
-
-.customersWrapper .customersCarousel {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 1.5) - 12px);
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  border-radius: 8px;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
-  /* height: 28rem; */
-}
-
-.customersCarousel::-webkit-scrollbar {
-  display: none;
-}
-.customersCarousel.no-transition {
-  scroll-behavior: auto;
-}
-.customersCarousel.dragging {
-  scroll-snap-type: none;
-  scroll-behavior: auto;
-}
-.customersCarousel.dragging .card {
-  cursor: grab;
-  user-select: none;
-}
-
-.customersCarousel :where(.card, .img) {
+#customers {
+  width: 80vw;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -568,7 +484,6 @@ nav .navbar-logo {
   margin: 1rem 0 0 0;
 }
 
-
 .customerCardHeader {
   width: 100%;
   height: 3rem;
@@ -586,7 +501,6 @@ nav .navbar-logo {
   align-items: center;
   justify-content: center;
   background-color: #fff;
-  
 }
 
 .customerCardImage img {
@@ -630,9 +544,7 @@ nav .navbar-logo {
   max-height: 80%;
   text-overflow: ellipsis;
   overflow: hidden;
-  
 }
-
 
 .customerCardHeader h3 {
   margin: 0;
@@ -643,7 +555,6 @@ nav .navbar-logo {
 .customerCardHeader p {
   color: var(--cinzaTexto);
 }
-
 
 .customersArrows {
   width: 100%;
@@ -706,6 +617,7 @@ nav .navbar-logo {
 .brandLogos {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
@@ -721,6 +633,11 @@ nav .navbar-logo {
   border-radius: 8px;
   scroll-behavior: smooth;
   scrollbar-width: none;
+}
+
+.brandWrapper {
+  max-width: 1100px;
+  width: 100%;
 }
 
 .brandCarousel::-webkit-scrollbar {
@@ -743,7 +660,6 @@ nav .navbar-logo {
   justify-content: center;
   align-items: center;
 }
-
 
 .brandsArrows {
   width: 100%;
@@ -775,11 +691,10 @@ nav .navbar-logo {
 }
 
 .brandLogo {
-  display: flex;
   width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1rem;
 }
 
 .brandLogo img {
@@ -790,6 +705,67 @@ nav .navbar-logo {
   object-fit: cover;
   align-items: center;
   object-fit: cover;
+}
+
+.swiper-slide {
+  display: flex !important;
+}
+
+.swiper {
+  width: 80vw;
+  height: 20rem;
+}
+
+.swiper-slide-div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  max-height: 15rem;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--verdeIsobloco) !important; /* Por exemplo, vermelho para ativo */
+}
+
+#partners {
+  width: 80vw;
+  height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0 2rem 0;
+}
+
+#partners img {
+  max-height: 100%;
+}
+
+.partnersArrows {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0 2rem 0;
+}
+
+.partnesArrows span {
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  font-size: 1.25rem;
+  text-align: center;
+  line-height: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+  margin-right: 2rem;
+  user-select: none;
 }
 
 .recentBlogSection {
@@ -919,10 +895,6 @@ nav .navbar-logo {
   /* font-size: 1.5rem; */
   color: #fff;
 }
-
-
-
-
 
 .title {
   margin: 2rem 0 2rem 0;
