--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ nav .navbar-logo {
 
 .aboutCardTitle {
   display: flex;
+  align-items: center;
 }
 
 .aboutCardTitle span {
@@ -655,6 +656,29 @@ nav .navbar-logo {
   max-height: 100%;
 }
 
+.partnersSectionText {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.partnersSectionText h2 {
+  margin: 2rem 0 1rem 0;
+  font-weight: 600;
+  font-size: 2.5rem;
+  color: var(--verdeTexto);
+  text-transform: uppercase;
+}
+
+.partnersSectionText p {
+  margin: 1rem 0 1rem 0;
+  width: 80%;
+  font-weight: 300;
+  color: var(--cinzaTexto);
+}
+
 .recentBlogSection {
   width: 100%;
   height: 100%;
@@ -959,7 +983,7 @@ footer img {
     width: 100%;
     padding: 0;
     flex-wrap: wrap;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
 
   .navbar-logo {
@@ -987,4 +1011,64 @@ footer img {
     margin-left: 0px;
     margin: 2px;
   }
+
+  .features h2 {
+    font-size: 2rem;
+    margin: 1rem 0 1rem 0;
+  }
+
+  .features p {
+    margin: 0 0 1rem 0;
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .aboutIsobloco h2 {
+    font-size: 2rem;
+    margin: 1rem 0 1rem 0;
+  }
+
+  .aboutIsobloco h4 {
+    font-size: 1rem;
+    margin: 0 0 1rem 0;
+  }
+
+  .aboutIsoblocoContent {
+    width: 90%;
+  }
+
+  .aboutCard p{
+    margin: .5rem 0 .5rem 0;
+  }
+
+  .aboutCardTitle h3{
+    font-size: 1rem;
+  }
+
+  .customersSectionText h2 {
+    font-size: 1.7rem;
+    margin: 1rem 0 1rem 0;
+  }
+
+  .brandLogoSectionText {
+    width: 100%;
+  }
+
+  .partnersSectionText {
+    width: 100%;
+  }
+
+  .contactSection {
+    width: 100%;
+  }
+
+  .infoContact {
+    flex-direction: column;
+  }
+
+  .infoContact span {
+    margin-right: 0;
+    margin-bottom: 0.5rem;
+  }
+  
 }
